--- a/BAITAP_JAVA/src/.project
+++ b/BAITAP_JAVA/src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lab1_8</name>
+	<name>src</name>
 	<comment></comment>
 	<projects>
 	</projects>
